--- a/src/components/NeedHelpModal/NeedHelpModal.css
+++ b/src/components/NeedHelpModal/NeedHelpModal.css
@@ -1,3 +1,21 @@
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  opacity: 0;
+  animation: fadeIn 0.8s ease forwards;
+}
+
+.modal-help {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .help-form {
   border: 1px solid rgba(190, 219, 176, 0.5);
   border-radius: 8px;
@@ -6,8 +24,6 @@
   background-color: #151515;
   margin: 0;
   position: absolute;
-  top: 14px;
-  right: 14px;
   background-color: transparent;
 }
 .form-title-lh {
@@ -17,6 +33,7 @@
   color: #fff;
   margin-left: 24px;
   margin-bottom: 24px;
+  margin-top: 24px;
 }
 
 .input-email {
@@ -32,20 +49,25 @@
   padding-left: 18px;
 }
 .comment {
+  resize: none;
+  width: 100%;
   border: 1px solid #bedbb0;
   border-radius: 8px;
   width: 287px;
   height: 120px;
   opacity: 0.4;
   margin-left: 24px;
-  background-color: #151515;
+  background-color: transparent;
   margin-bottom: 24px;
   color: #fff;
   margin-right: 18px;
   padding-left: 18px;
+  padding-top: 18px;
 }
 .input-email:hover,
-.comment:hover {
+.comment:hover,
+.help-form:hover,
+.close-button:hover {
   border-color: #9dc888;
 }
 .btn-send-lg {
@@ -68,13 +90,16 @@ input.input-email::placeholder {
   color: #fff;
 }
 
-.close-icon {
+.close-button {
   position: absolute;
-  top: -12px;
-  right: 12px;
-  cursor: pointer;
-  stroke-width: 1.5px;
+  top: 10px;
+  right: 10px;
+  background-color: transparent;
 }
+.close-button:hover {
+  border-color: #9dc888;
+}
+
 @media screen and (min-width: 768px) {
 }
 
@@ -94,5 +119,13 @@ input.input-email::placeholder {
   .btn-send-lg {
     width: 352px;
     height: 49px;
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1.5;
   }
 }
