--- a/src/components/ThemeSelect/ThemeSelect.css
+++ b/src/components/ThemeSelect/ThemeSelect.css
@@ -10,9 +10,9 @@
     box-shadow: none !important;
 }
 .custom-select__menu{
-    background-color: var(--bar-color) !important;
+    background-color: var(--header-color) !important;
     width: 100px !important;
-    color: rgba(255, 255, 255, 0.5);
+    color: var(--grey-text-color);
 
 }
 
@@ -23,6 +23,7 @@
 
 .custom-select__input-container{
     margin: 0 !important;
+   
 }
 
 .custom-select__placeholder{
@@ -30,7 +31,7 @@
     font-weight: 500 !important;
     font-size: 14px !important;
     letter-spacing: -0.02em;
-    color: rgba(255, 255, 255, 0.8) !important;
+    color: var(--grey-text-color) !important;
     padding:0 !important ;
     
 }
@@ -38,7 +39,7 @@
     padding: 0 !important;
 }
 .custom-select__single-value{
-    color: rgba(255, 255, 255, 0.8) !important;
+    color: var(--grey-text-color) !important;
 }
 .custom-select__indicators{
 cursor: pointer !important;
@@ -50,13 +51,22 @@ cursor: pointer !important;
 }
 .custom-select__option{
     cursor: pointer !important;
+    transition: 350ms ease-in-out;
     /* background-color: transparent !important; */
 }
 .custom-select__option--is-focused{
     background-color: transparent !important;
-    color: #bedbb0 !important;
+    color: var(--accent-color)!important;
 }
 .custom-select__option--is-hover{
     background-color: transparent !important;
-        color: #bedbb0 !important;
+        color:var(--accent-color)!important;
+}
+.custom-select__option--is-selected {
+    background-color: lighten(var(--lightgrey-text-color),8%) !important;
+    color: var(--grey-text-color) !important;
+}
+.custom-select__option--is-selected:hover{
+    /* background-color: lighten(var(--lightgrey-text-color), 78%) !important; */
+    color: var(--accent-color) !important;
 }
